# LearningPython

./: README.md
CP - Basico ao avançado/M1/100_ex_cpf/: exCpfSegDigito.py
CP - Basico ao avançado/M1/103_criando_CPF_random/: random.py
CP - Basico ao avançado/M1/18_print/: print.py
CP - Basico ao avançado/M1/19_int_float/: int_float.py
CP - Basico ao avançado/M1/22_converter_tipos/: converter.py
CP - Basico ao avançado/M1/24_ex_var/: ex_variaveis.py
CP - Basico ao avançado/M1/29_ex_IMC/: imc.py
CP - Basico ao avançado/M1/31_fstring/: imc.py
CP - Basico ao avançado/M1/32_format/: format.py
CP - Basico ao avançado/M1/33_input/: input.py
CP - Basico ao avançado/M1/34_if_else/: if_else.py
CP - Basico ao avançado/M1/38_ex_ifelse/: ex_ifelse.py
CP - Basico ao avançado/M1/41_or_and_not/: or_and_not.py
CP - Basico ao avançado/M1/43_in_notIn/: in_notIn.py
CP - Basico ao avançado/M1/44_interpolacao/: interpolacao.py
CP - Basico ao avançado/M1/46_fatiamento_string/: fatiamento.py
CP - Basico ao avançado/M1/47_exercicio_nome_idade/: ex_nome_idade.py
CP - Basico ao avançado/M1/49_try_except/: try_except.py
CP - Basico ao avançado/M1/54_ex/: ex.py
CP - Basico ao avançado/M1/59_while_break/: while_break.py
CP - Basico ao avançado/M1/72_for_in/: for_in.py
CP - Basico ao avançado/M1/76_ex_palavra_secreta/: ex_palavra_secreta.py
CP - Basico ao avançado/M1/81_lista/: lista.py
CP - Basico ao avançado/M1/85_lista_for_in/: lista_for_in.py
CP - Basico ao avançado/M1/87_empacotamento_tupla/: empac_tupla.py
CP - Basico ao avançado/M1/89_enumerate/: enumerate.py
CP - Basico ao avançado/M1/90_ex_listas/: ex_listas.py
CP - Basico ao avançado/M1/96_desempacotamento_functions/: desemp_func.py
CP - Basico ao avançado/M1/97_ternario/: OperadorTernario.py
CP - Basico ao avançado/M1/98_algoritmo_cpf_dig/: AlgoritmoCpfDigito.py
CP - Basico ao avançado/M2/105_def/: def.py
CP - Basico ao avançado/M2/106_def_args/: def_args.py
CP - Basico ao avançado/M2/109_contextoFunctions/: contextoFuncitons.py
CP - Basico ao avançado/M2/111_multiplos_args/: multiplos_args.py
CP - Basico ao avançado/M2/113_ex_functions/: ex_functions.py
CP - Basico ao avançado/M2/114_high_order_functions/: high_order.py
CP - Basico ao avançado/M2/116_closure/: closure.py  testandoJson.py
CP - Basico ao avançado/M2/117_ex_functions/: correcao.py  exFunctions.py
CP - Basico ao avançado/M2/119_Dicionario/: Dicionario.py
Treinos de CRUD/SQLite/: data_user_sqlite.db  db_conected.py  main.py  sqlite.sql
Treinos de CRUD/dicionarios/: api2.py  parametroQuery.py
Treinos_de_CRUD/CRUD_com_foreign_key_docker/: Dockerfile
Treinos_de_CRUD/SQLite/: db_conected2.py  db_conected_gpt.py
Treinos_de_CRUD/crud_usuario/: docker-compose.yml  pyproject.toml
Treinos_de_CRUD/crud_usuario/src/: Dockerfile
Treinos_de_CRUD/dicionarios/: apiAnimal.py
learning docker/CRUD_com_foreign_key_docker/: Dockerfile  readme.md
learning docker/CRUD_com_foreign_key_docker/docker/: pyproject.toml
learning docker/docker_compose/: docker-compose.yml
learning docker/docker_images/crud_api_docker_fastapi_poetry/app/: crud.py  database.py  main.py  pyproject.toml  schemas.py
learning docker/docker_images/docker_api_poetry/docker_app/docker/: pyproject.toml  requirements.txt
learning docker/docker_images/docker_api_poetry/docker_app/docker/docker_app/: main.py
learning docker/docker_images/hello_world_docker/: pyproject.toml
learning docker/primeiro_docker/: pyproject.toml
learning docker/primeiro_docker/app/: main.py
livro_caelum_python/: main.py
livro_caelum_python/Arquivos/: Open.py
livro_caelum_python/args&kwargs/: Args.py  Kwargs.py
livro_caelum_python/conjuntos/: conjuntos.py
livro_caelum_python/jogo/: adivinhacao.py
python_uvicorn_poetry/main/: pyproject.toml
python_uvicorn_poetry/main/main/: main.py
python_uvicorn_poetry/teste/: pyproject.toml
python_uvicorn_poetry/teste/teste/: main.py
python_uvicorn_poetry/teste2/: pyproject.toml
treinoPoo/: api.py  colaborador.py  recursosHumanos.py
(+29 files in other folders)
