[tool.poetry]
name = "crud-usuario"
version = "0.1.0"
description = ""
authors = ["lucas <lucas.rodrigues@yandeh.com.br>"]
readme = "README.md"
packages = [{include = "crud_usuario"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
