[tool.poetry]
name = "docker-app"
version = "0.1.0"
description = ""
authors = ["lucas <lucas.lrodrigues@sptech.school>"]
readme = "README.md"
packages = [{include = "docker_app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
boto3 = "1.17.112"
botocore = "1.20.112"
business-duration = "0.66"
certifi = "2021.10.8"
chardet = "4.0.0"
configparser = "4.0.2"
contextlib2 = "0.6.0.post1"
enum34 = "1.1.10"
fdb = "2.0.2"
flake8 = "3.9.2"
future = "0.18.2"
idna = "2.10"
importlib-metadata = "2.1.3"
jaydebeapi = "1.2.3"
jmespath = "0.10.0"
jpype1 = "0.7.0"
mccabe = "0.6.1"
minio = "5.0.9"
mysql-connector = "2.2.9"
numpy = "1.16.6"
pathlib = "1.0.1"
pathlib2 = "2.3.7.post1"
psycopg2-binary = "2.8.6"
pycodestyle = "2.7.0"
pycrypto = "2.6.1"
pyflakes = "2.3.1"
pymssql = "2.1.5"
pymsteams = "0.1.16"
pymysql = "0.10.1"
python-dateutil = "2.8.2"
pytz = "2022.6"
requests = "2.27.1"
s3transfer = "0.4.2"
scandir = "1.10.0"
simplejson = "3.18.0"
six = "1.16.0"
urllib3 = "1.26.13"
zipp = "1.2.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "docker_app.main:start"